--- a/resources/imt-decal/air.css
+++ b/resources/imt-decal/air.css
@@ -152,8 +152,8 @@ body {
   font-family: 'Open Sans', Helvetica, sans-serif;
   font-weight: 300;
   margin: 6rem auto 1rem;
-  max-width: 48rem;
-  text-align: center;
+  max-width: 96rem;
+  text-align: left;
   color: #000;
 }
 
