--- a/resources/imt-decal/air.css
+++ b/resources/imt-decal/air.css
@@ -41,6 +41,10 @@
     page-break-inside: avoid;
   }
 
+  img {
+    max-width: 100% !important;
+  }
+
   p,
   h2,
   h3 {
@@ -153,6 +157,12 @@ body {
   color: #000;
 }
 
+img {
+  height: 200px;
+  margin: 0 auto;
+  width: 200px;
+}
+
 a,
 a:visited {
   color: #3498db;
@@ -186,8 +196,4 @@ li {
 
 p {
   color: #000;
-}
-
-.imgContainer{
-    float:left;
 }
