--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 
     <head>
         <meta charset="utf-8">
-        <!-- <title>{{ site.title }}</title> -->
+        <title>{{ site.title }}</title>
         <meta name="description" content="{{ site.description }}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 		<link rel="stylesheet" href="{{ '/styles/styles.css' | prepend:site.url }}">
