--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,9 +10,9 @@
 
     <body>
         <div id="container">
-            <h1 class="global-title">{{ site.title }}‍</h1>
+            <h1 class="global-title"><a href={{site.url}}><img style="vertical-align:middle" src="{{ site.greeting_image }}" alt="{{ site.title }}" class="avatar" /></a>{{ site.title }}<br></h1>
             {% if site.nav-links %}
-            <nav>
+            <!-- <nav>
                 <ul>
                     {% for link in site.nav-links %}
                     <li>
@@ -27,5 +27,5 @@
                     </li>
                     {% endfor %}
                 </ul>
-            </nav>
+            </nav> -->
             {% endif %}
