--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-$accent-color: #68A7CA; // link color
+$accent-color: #00A2FF; // link color
 $font-stack: system-ui, Helvetica, Arial, sans-serif;
 $heading-font-stack: system-ui, Helvetica, Arial, sans-serif; // use this to set a different font for your headings if you want
 $container-max-width: 750px;
@@ -62,8 +62,8 @@ h1 {
 }
 
 .global-title {
-  font-size: 3rem;
-  color: #222;
+  font-size: 2.25rem;
+  color: #333;
 }
 
 h2 {
@@ -112,8 +112,8 @@ img {
 }
 
 .avatar {
-  width: 10rem;
-  height: 10rem;
+  width: 7rem;
+  height: 7rem;
   border-radius: 5rem;
   margin-right: 1.5rem;
 }
