update index, analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,10 @@
         <meta name="description" content="{{ site.description }}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 		<link rel="stylesheet" href="{{ '/styles/styles.css' | prepend:site.url }}">
+
+    {% if site.google_analytics and jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
     </head>
 
     <body>
