--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
 
     <body>
         <div id="container">
-            <h1 class="global-title"><a href={{site.url}}><img style="vertical-align:middle" src="{{ site.greeting_image }}" alt="{{ site.title }}" class="avatar" /></a>{{ site.title }}<br></h1>
+            <h1 class="global-title"><a href={{site.url}}><img style="vertical-align:middle" src="{{ site.greeting_image }}" alt="{{ site.title }}" class="avatar" /></a><b>{{ site.title }}</b></h1>
             {% if site.nav-links %}
             <!-- <nav>
                 <ul>
