--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,10 +1,10 @@
 ---
 ---
 
-$accent-color: #00A2FF; // link color
+$accent-color: #0066cc; // link color (0066cc is Apple)
 $font-stack: system-ui, Helvetica, Arial, sans-serif;
 $heading-font-stack: system-ui, Helvetica, Arial, sans-serif; // use this to set a different font for your headings if you want
-$container-max-width: 750px;
+$container-max-width: 800px;
 
 // reset
 * {
@@ -43,7 +43,7 @@ nav a {
 h1 {
   color: #333;
   font-family: $heading-font-stack;
-  font-weight: 300;
+  font-weight: 800;
 }
 h2 {
   color: #333;
@@ -51,7 +51,12 @@ h2 {
   font-weight: 300;
 }
 h3 {
-  color: #555;
+  color: #333;
+  font-family: $heading-font-stack;
+  font-weight: 300;
+}
+h4 {
+  color: #333;
   font-family: $heading-font-stack;
   font-weight: 300;
 }
@@ -103,7 +108,8 @@ a {
 
 a:hover,
 a:active {
-  color: lighten($accent-color, 10%);
+  color: lighten($accent-color, 5%);
+  text-decoration: underline;
 }
 
 // images
@@ -112,8 +118,8 @@ img {
 }
 
 .avatar {
-  width: 7rem;
-  height: 7rem;
+  width: 8rem;
+  height: 8rem;
   border-radius: 5rem;
   margin-right: 1.5rem;
 }
