--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,27 +1,38 @@
-{% include head.html %}
+<!DOCTYPE html>
 
-{% if page.is_post %}<a
-  href="{{ '/blog' | prepend:site.url }}"
-  >← Back to all posts</a
->{% endif %}
+    <head>
+        <meta charset="utf-8">
+        <title>{{ page.title }} • {{ site.title }}</title>
+        <meta name="description" content="{{ site.description }}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+		<link rel="stylesheet" href="{{ '/styles/styles.css' | prepend:site.url }}">
 
-<!-- {% unless page.url == "/" %}
-<h1>
-  {% if page.title %}{{ page.title }}{% endif %}{% if post.title %}{{ post.title
-  }}{% endif %}
-</h1>
-{% endunless %} -->
+    {% if site.google_analytics and jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
+    </head>
 
-{% if page.date %}
-<span class="timestamp timestamp-block">
-  {% include post-date.html %}
-</span>
-{% endif %}
+    <body>
+        <div id="container">
+            <!-- <h1 class="global-title"><a href={{site.url}}><img style="vertical-align:middle" src="{{ site.greeting_image }}" alt="{{ site.title }}" class="avatar" /></a><b>{{ site.title }}</b></h1> -->
+            {% if site.nav-links %}
+            <!-- <nav>
+                <ul>
+                    {% for link in site.nav-links %}
+                    <li>
+                        {% if link.external == true %}
+                        <a href="{{ link.url }}">
+                        {% endif %}
+                        {% if link.external != true %}
+                        <a href="{{ link.url | prepend:site.url }}">
+                        {% endif %}
+                            {{ link.name }}
+                        </a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </nav> -->
+            {% endif %}
 
-{% if page.url == "/" %}
-{% include greeting.html %}
-{% endif %}
 
 {{ content }}
-
-{% include foot.html %}
