--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,8 +2,8 @@
 ---
 
 $accent-color: #0066cc; // link color (0066cc is Apple)
-$font-stack: system-ui, Helvetica, Arial, sans-serif;
-$heading-font-stack: system-ui, Helvetica, Arial, sans-serif; // use this to set a different font for your headings if you want
+$font-stack: Avenir, system-ui, Helvetica, Arial, sans-serif;
+$heading-font-stack: Avenir, system-ui, Helvetica, Arial, sans-serif; // use this to set a different font for your headings if you want
 $container-max-width: 800px;
 
 // reset
