--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,7 @@
     </head>
 
     <body>
+        hello my name is bob
         <div id="container">
             <!-- <h1 class="global-title"><a href={{site.url}}><img style="vertical-align:middle" src="{{ site.greeting_image }}" alt="{{ site.title }}" class="avatar" /></a><b>{{ site.title }}</b></h1> -->
             {% if site.nav-links %}
